2008-07-31  Jan Schmidt  <jan.schmidt@sun.com>

	* src/htdocs/entities.gst:
	* src/htdocs/releases/gst-plugins-bad/0.10.8.xml:
	* src/htdocs/releases/gst-plugins-bad/Makefile.am:
	* src/htdocs/releases/gst-plugins-good/0.10.9.xml:
	* src/htdocs/releases/gst-plugins-good/Makefile.am:
	Release gst-plugins-good 0.10.9 and gst-plugins-bad 0.10.8

2008-07-15  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* src/htdocs/download/index.xml::
	  Update info for debian/ubuntu (#542894).

2008-07-03  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* src/htdocs/entities.gst:
	* src/htdocs/modules/modules.xml:
	* src/htdocs/modules/modules.xsl:
	  gst-plugins is no more, so don't claim it's needed to do
	  anything useful with GStreamer. Also, use 'CVS HEAD' as
	  development version for most things instead of abandoned
	  0.9.x versions.

2008-06-27  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/apps/index.xml:
	  Long overdue update because LiveSupport was renamed to CampCaster.

2008-06-25  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* src/htdocs/bugs/bugs.xml:
	  Test whether automatic website rebuild works now; also
	  remove prehistoric milestones from bugs list.

2008-06-25  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* src/htdocs/bindings/bindings.xml:
	  More c++ bindings page updates.

2008-06-24  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* src/htdocs/bugs/bugs.xml:
	  More milestones.

2008-06-24  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* src/htdocs/bindings/bindings.xml:
	  Update c++ bindings blurb.

2008-06-18  Jan Schmidt  <jan.schmidt@sun.com>

	* src/htdocs/entities.gst:
	* src/htdocs/news/news.xml:
	* src/htdocs/releases/gst-plugins-base/0.10.20.xml:
	* src/htdocs/releases/gst-plugins-base/Makefile.am:
	* src/htdocs/releases/gst-python/0.10.12.xml:
	* src/htdocs/releases/gst-python/Makefile.am:
	* src/htdocs/releases/gstreamer/0.10.20.xml: