@@ -3116,5 +3116,22 @@ or download tarballs for
 </p>
     </content>
   </item>
+<item>
+    <date>2008-04-31 23:00</date>
+<title>GStreamer Good 0.10.9 &amp; Bad 0.10.8 stable releases</title>
+<content>
+<p>
+The GStreamer team is thrilled to announce new releases of the Good and Bad Plugins modules in the 0.10 GStreamer stable release series.
+</p>
+<p>
+Check out release notes for
+<a href="&site;/releases/gst-plugins-good/0.10.9.html">gst-plugins-good</a> and
+<a href="&site;/releases/gst-plugins-bad/0.10.8.html">gst-plugins-bad</a>
+or download tarballs for
+<a href="&site;/src/gst-plugins-good/gst-plugins-good-0.10.9.tar.bz2">gst-plugins-good</a> and
+<a href="&site;/src/gst-plugins-bad/gst-plugins-bad-0.10.8.tar.bz2">gst-plugins-bad</a>
+</p>
+    </content>
+  </item>
 
 </news>
