@@ -1,5 +1,10 @@
 2008-07-31  Jan Schmidt  <jan.schmidt@sun.com>
 
+	* src/htdocs/news/news.xml:
+	Add news item for new releases
+
+2008-07-31  Jan Schmidt  <jan.schmidt@sun.com>
+
 	* src/htdocs/entities.gst:
 	* src/htdocs/releases/gst-plugins-bad/0.10.8.xml:
 	* src/htdocs/releases/gst-plugins-bad/Makefile.am:
